<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 <PreferenceCategory
   android:summary="@string/alarm_prefcat_summary"
   android:title="@string/alarm_prefcat_title" >
  <EditTextPreference 
     android:key="alarmDelay"
     android:title="@string/alarm_delay_title"
     android:summary="@string/alarm_delay_summary"
     android:numeric="integer"
     android:maxLength="3"/>
  
  <EditTextPreference
     android:key="alarmProfile"
     android:title="@string/alarm_profile_title"
     android:summary="@string/alarm_profile_summary" />
 </PreferenceCategory>

  <PreferenceCategory
   android:summary="@string/server_prefcat_summary"
   android:title="@string/server_prefcat_title" >
  <EditTextPreference 
     android:key="serverUser"
     android:title="@string/server_user_title"
     android:summary="@string/server_user_summary" />
  <EditTextPreference 
     android:key="serverPassword"
     android:title="@string/server_password_title"
     android:summary="@string/server_password_summary"
     android:password="true" />
  <EditTextPreference android:key="serverAdress" android:summary="@string/server_adress_summary" android:title="@string/server_adress_title"/>
 </PreferenceCategory>
 
 <PreferenceCategory
   android:summary="@string/accelerometer_prefcat_summary"
   android:title="@string/accelerometer_prefcat_title" >
  <CheckBoxPreference
     android:key="accLoggingEnabled"
     android:title="@string/acc_logging_enabled_title"
     android:summary="@string/acc_logging_enabled_summary" />
  <EditTextPreference
     android:key="accSampleFreq"
     android:title="@string/acc_sampling_freq_title"
     android:summary="@string/acc_sampling_freq_summary" />
 </PreferenceCategory>
 
  <PreferenceCategory
   android:summary="@string/position_prefcat_summary"
   android:title="@string/position_prefcat_title" >
  <CheckBoxPreference
     android:key="posLoggingEnables"
     android:title="@string/pos_logging_enabled_title"
     android:summary="@string/pos_logging_enabled_summary" />
  <EditTextPreference
     android:key="posMinDist"
     android:title="@string/pos_min_dist_title"
     android:summary="@string/pos_min_dist_summary" />
    <EditTextPreference
     android:key="posMinTime"
     android:title="@string/pos_min_time_title"
     android:summary="@string/acc_logging_enabled_summary" />
 </PreferenceCategory>
 
</PreferenceScreen>
